--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <div class="logo">
                 <img src="img/logo.png" alt="">
             </div>
+            <div class="carro">
+                <input type="search" placeholder="Tu carro                            🛒 ">
+            </div>
             <div class="search">
                 <input type="search" placeholder="¿Que deseas buscar?">
             </div>
@@ -30,11 +33,10 @@
             </label>
                 <nav>
                     <ul>
-                        <li><a href="#" id="selected"></a></li>
-                        <li><a href="#">Servicios</a></li>
-                        <li><a href="#">Nosotros</a></li>
+                        <li><a href="index.html" id="selected"></a></li>
+                        <li><a href="login.html">Login</a></li>
                         <li><a href="#">Atenciones</a></li>
-                        <li><a href="#">Creacion de cuenta</a></li>
+                        <li><a href="creacion.html">Creacion de cuenta</a></li>
                         <li><a href="#">Contactos</a></li>
                     </ul>
                 </nav>
@@ -51,27 +53,30 @@
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">First slide</text></svg>
-                        <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
-                        </div>
+                <div class="carousel-item active">
+                    <img src="img/mecanico-juan.jpg" height="500px" class="d-block w-100" alt="mecanico-juan">
+                    <div class="carousel-caption d-none d-md-block">
+                        <a href="meca1.html" class="button" >siguiente</a>
+                        <h2>Chequeo de motor</h2>
+                        <p>Buscamos garantizar el tratamiento de el motor en un 100 %.</p>
                     </div>
-                    <div class="carousel-item">
-                    <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444" dy=".3em">Second slide</text></svg>
-                        <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
-                        </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/mecanico-Cesar-Andrea.jpg" height="500px" class="d-block w-100" alt="mecanico-Cesar-Andrea">
+                    <div class="carousel-caption d-none d-md-block">
+                        <a href="meca2.html" class="button" >siguiente</a>
+                        <h2>Reparacion sistema electrico</h2>
+                        <p>Buscamos garantizar la autonomia de los autos.</p>
                     </div>
-                    <div class="carousel-item">
-                        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#555"></rect><text x="50%" y="50%" fill="#333" dy=".3em">Third slide</text></svg>
-                            <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
-                            </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/mecanico-Pedro.jpg" height="500px" class="d-block w-100" alt="mecanico-Pedro">
+                    <div class="carousel-caption d-none d-md-block">
+                        <a href="meca3.html" class="button" >siguiente</a>
+                        <h2>Ajuste de direcionales</h2>
+                        <p>Pioneros en la reparacion de direcionales.</p>
                     </div>
+                </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
