--- a/nuevas_atenciones.html
+++ b/nuevas_atenciones.html
@@ -30,11 +30,11 @@
             </label>
                 <nav>
                     <ul>
-                        <li><a href="#" id="selected"></a></li>
-                        <li><a href="#">Servicios</a></li>
-                        <li><a href="#">Atenciones</a></li>
-                        <li><a href="#">Creacion de cuenta</a></li>
-                        <li><a href="#">Contactos</a></li>
+                        <li><a href="index.html" id="selected"></a></li>
+                        <li><a href="login.html">Login</a></li>
+                        <li><a href="nuevas_atenciones.html">Atenciones</a></li>
+                        <li><a href="creacion.html">Creacion de cuenta</a></li>
+                        <li><a href="contacto.html">Contactos</a></li>
                     </ul>
                 </nav>
             </div>
