--- a/creacion.html
+++ b/creacion.html
@@ -13,6 +13,12 @@
 </head>
 <body>
 
+    <nav>
+        <ul>
+            <li><a href="index.html" id="selected"></a></li>
+        </ul>
+    </nav>
+
     <body class="cuerpo-login"></body>
     <div class="login-box">
         <img src="img/logo.png" alt="Logo" height="180px">
