--- a/meca1.html
+++ b/meca1.html
@@ -35,9 +35,9 @@
                     <ul>
                         <li><a href="index.html" id="selected"></a></li>
                         <li><a href="login.html">Login</a></li>
-                        <li><a href="#">Atenciones</a></li>
+                        <li><a href="nuevas_atenciones.html">Atenciones</a></li>
                         <li><a href="creacion.html">Creacion de cuenta</a></li>
-                        <li><a href="#">Contactos</a></li>
+                        <li><a href="contacto.html">Contactos</a></li>
                     </ul>
                 </nav>
             </div>
