--- a/contacto.html
+++ b/contacto.html
@@ -30,11 +30,11 @@
             </label>
                 <nav>
                     <ul>
-                        <li><a href="index.html" id="selected"></a></li>
+                        <li><a href="index.html" ></a></li>
                         <li><a href="login.html">Login</a></li>
                         <li><a href="nuevas_atenciones.html">Atenciones</a></li>
                         <li><a href="creacion.html">Creacion de cuenta</a></li>
-                        <li><a href="contacto.html">Contactos</a></li>
+                        <li><a href="contacto.html" id="selected">Contactos</a></li>
                     </ul>
                 </nav>
             </div>
