--- a/nuevas_atenciones.html
+++ b/nuevas_atenciones.html
@@ -30,9 +30,9 @@
             </label>
                 <nav>
                     <ul>
-                        <li><a href="index.html" id="selected"></a></li>
+                        <li><a href="index.html" ></a></li>
                         <li><a href="login.html">Login</a></li>
-                        <li><a href="nuevas_atenciones.html">Atenciones</a></li>
+                        <li><a href="nuevas_atenciones.html" id="selected">Atenciones</a></li>
                         <li><a href="creacion.html">Creacion de cuenta</a></li>
                         <li><a href="contacto.html">Contactos</a></li>
                     </ul>
