--- a/contacto.html
+++ b/contacto.html
@@ -14,6 +14,9 @@
 <body>
     <header>
         <div class="header__superior">
+            <div class="carro">
+                <input type="search" placeholder="Tu carro                            🛒 ">
+            </div>
             <div class="logo">
                 <img src="img/logo.png" alt="">
             </div>
