--- a/nuevas_atenciones.html
+++ b/nuevas_atenciones.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <div id="banner">
         <div class="header__superior">
             <div class="logo">
                 <img src="img/logo.png" alt="">
@@ -41,6 +42,7 @@
                     </ul>
                 </nav>
             </div>
+        </div>
         </div>
     </header>
 <main>
