--- a/creacion.html
+++ b/creacion.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+    <div id="fondo-login">
 
     <nav>
         <ul>
@@ -22,7 +23,7 @@
     <body class="cuerpo-login"></body>
     <div class="login-box">
         <img src="img/logo.png" alt="Logo" height="180px">
-        <h1>Login Aqui</h1>
+        <h1>creacion de cuenta</h1>
 
     <form action="">
         <!--Usuaurio-->
@@ -43,6 +44,7 @@
         <a href="creacion.html">¿No tienes usuario?</a>
     </form>
     <div id="error"></div>
+    </div>
     </div>
     
 <script src="funciones.js"></script>
