--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
+    <div id="fondo-login">
     <nav>
         <ul>
             <li><a href="index.html" id="selected"></a></li>
@@ -43,8 +43,8 @@
         <a href="creacion.html">¿No tienes usuario?</a>
     </form>
     <div id="error"></div>
+    </div>  
     </div>
-    
 <script src="funciones.js"></script>
 </body>
 </html>
