--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </header>
 
-    <main>
+<main>
         <article>
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
@@ -56,27 +56,24 @@
                 </div>
                 <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/mecanico-juan.jpg" height="500px" class="d-block w-100" alt="mecanico-juan">
+                    <a href="meca1.html" class="button" ><img src="img/mecanico-juan.jpg" height="400px" class="d-block w-100" alt="mecanico-1"></a>
                     <div class="carousel-caption d-none d-md-block">
-                        <a href="meca1.html" class="button" >siguiente</a>
                         <h2>Chequeo de motor</h2>
                         <p>Buscamos garantizar el tratamiento de el motor en un 100 %.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/mecanico-Cesar-Andrea.jpg" height="500px" class="d-block w-100" alt="mecanico-Cesar-Andrea">
+                    <a href="meca2.html" class="button" ><img src="img/" height="400px" class="d-block w-100" alt="mecanico-2"></a>
                     <div class="carousel-caption d-none d-md-block">
-                        <a href="meca2.html" class="button" >siguiente</a>
-                        <h2>Reparacion sistema electrico</h2>
-                        <p>Buscamos garantizar la autonomia de los autos.</p>
+                        <h2>Chequeo de motor</h2>
+                        <p>Buscamos garantizar el tratamiento de el motor en un 100 %.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/mecanico-Pedro.jpg" height="500px" class="d-block w-100" alt="mecanico-Pedro">
+                    <a href="meca3.html" class="button" ><img src="img/mecanico-Pedro.jpg" height="400px" class="d-block w-100" alt="mecanico-3"></a>
                     <div class="carousel-caption d-none d-md-block">
-                        <a href="meca3.html" class="button" >siguiente</a>
-                        <h2>Ajuste de direcionales</h2>
-                        <p>Pioneros en la reparacion de direcionales.</p>
+                        <h2>Chequeo de motor</h2>
+                        <p>Buscamos garantizar el tratamiento de el motor en un 100 %.</p>
                     </div>
                 </div>
                 </div>
