nueva propuesta de servicios

--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
                 </div>
                 <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <a href="meca1.html" class="button" ><img src="img/mecanico-juan.jpg" height="450px" class="d-block w-100" alt="mecanico-1"></a>
+                    <a href="chequeoMotor.html" class="button" ><img src="img/mecanico-juan.jpg" height="450px" class="d-block w-100" alt="mecanico-1"></a>
                     <div class="carousel-caption d-none d-md-block">
                         <h2>Chequeo de motor</h2>
                         <p>Buscamos garantizar el tratamiento de el motor en un 100 %.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <a href="meca2.html" class="button" ><img src="img/12131.jpg" height="450px" class="d-block w-100" alt="mecanico-2"></a>
+                    <a href="sistemaElectronico.html" class="button" ><img src="img/12131.jpg" height="450px" class="d-block w-100" alt="mecanico-2"></a>
                     <div class="carousel-caption d-none d-md-block">
                         <h2>Chequeo de motor</h2>
                         <p>Buscamos garantizar el tratamiento de el motor en un 100 %.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <a href="meca3.html" class="button" ><img src="img/mecanico-Pedro.jpg" height="450px" class="d-block w-100" alt="mecanico-3"></a>
+                    <a href="ajsDireccionales.html" class="button" ><img src="img/mecanico-Pedro.jpg" height="450px" class="d-block w-100" alt="mecanico-3"></a>
                     <div class="carousel-caption d-none d-md-block">
                         <h2>Chequeo de motor</h2>
                         <p>Buscamos garantizar el tratamiento de el motor en un 100 %.</p>
