--- a/creacion.html
+++ b/creacion.html
@@ -12,41 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div id="fondo-login">
-
-    <nav>
-        <ul>
-            <li><a href="index.html" id="selected"></a></li>
-        </ul>
-    </nav>
-
-    <body class="cuerpo-login"></body>
-    <div class="login-box">
-        <img src="img/logo.png" alt="Logo" height="180px">
-        <h1>creacion de cuenta</h1>
-
-    <form action="">
-        <!--Usuaurio-->
-        <label for="username">Usuario</label>
-        <input type="text" id="Usuario" placeholder="Ingrese Correo">
-
-        <!--Password-->
-        <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Ingrese Password">
-
-        <!--boton login-->
-        <input type="submit" onclick="return enviarFormulario();" value="Log In">
-
-        <!--referencias a creacion de cuenta y perdida de clave-->
-
-        
-        <a href="#">¿Perdiste tu clave?</a><br>
-        <a href="creacion.html">¿No tienes usuario?</a>
-    </form>
-    <div id="error"></div>
-    </div>
-    </div>
-    
-<script src="funciones.js"></script>
+    <div id="app"></div>
+    <script src="api.js" type="module"></script>
 </body>
 </html>
