--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <a href="chequeoMotor.html" class="boton-engranaje">Motor<i class="fas fa-cog"></i></a>
             <a href="sistemaElectronico.html" class="boton-engranaje">Electronica<i class="fas fa-cog"></i></a>
-            <a href="ajsDireccionales.html" class="boton-engranaje">Direccionales<i class="fas fa-cog"></i></a>
+            <a href="jsDireccionales.html" class="boton-engranaje">Direccionales<i class="fas fa-cog"></i></a>
 
 
 <script src="api.js"></script>
